--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
 <body>
 
+	<div class ='reticule ret-dark'></div>
+	<div class='reticule ret-light'><div class='reticule ret-center'></div></div>
+
 	<div class='majority'>
 
 		<div class='intro'>
