Alters dom, hiding and showing, adds reticule
- Dom no longer contains majority so canvas is not blocked
- Pointer lock and pointer free now grouped and looped through
- Reticule parts are enclosed in a reticule div

--- a/index.html
+++ b/index.html
@@ -29,22 +29,20 @@
 
 <body>
 
-	<div class ='reticule ret-dark'></div>
-	<div class='reticule ret-light'><div class='reticule ret-center'></div></div>
+	<div class='reticule'>
+		<div class ='ret-dark'></div>
+		<div class='ret-light'><div class='ret-center'></div></div>
+	</div>
 
-	<div class='majority'>
+	<div class='intro'>
+		<p>CLICK to start</p>
+		<p>Press ESC to toggle the editor</p>
+		<p>Press 't' while pointerlocked to run unit tests. Results appear in the console.</p>
+	</div>
 
-		<div class='intro'>
-			<p>CLICK to start</p>
-			<p>Press ESC to toggle the editor</p>
-			<p>Press 't' while pointerlocked to run unit tests. Results appear in the console.</p>
-		</div>
-
-		<div class='hud bottombar collapsed'>
-			<button class='noted esc-clause'>Press ESC to toggle editing</button>
-		</div>
-
-	</div> <!-- end .majority -->
+	<div class='hud bottombar collapsed'>
+		<button class='noted esc-clause'>Press ESC to toggle editing</button>
+	</div>
 
 	<div class='sidebar hud scrollable'>
 
